--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ feed: /atom.xml
 author:
     name: fofore
     email: qianminming@gmail.com
-description: 
+description: this is fofore's blog, use jekyll and github, and the domain name fofore means nothing but just a symbol that qianminming made up in NJUPT.
