--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 markdown: rdiscount
 pygments: true
 permalink: /:year/:month/:title
-url: http://qianminming.com
+url: http://qianminming.me
 author: Minming Qian
